--- a/views/dashAdmin/navbarDash.ejs
+++ b/views/dashAdmin/navbarDash.ejs
@@ -12,7 +12,7 @@
     </div>
     <ul class="navbar-menu" id="navbarMenu">
         <li><a href="/admin/dashboardAdmin"><span class="las la-home"></span> Home</a></li>
-        <li><a href="#"><span class="las la-chart-pie"></span> Analytics</a></li>
+        <li><a href="/admin/dashboardAdmin/aporan-analitik-user"><span class="las la-chart-pie"></span> Analytics</a></li>
      
 
 
@@ -31,7 +31,7 @@
                 <span class="lab la-dropbox"></span> Internal <span class="dropdown-arrow"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a href="#">Data Tim</a></li>
+                <li><a href="/admin/dashboardAdmin/tim-internal">Data Tim</a></li>
                 <li><a href="/admin/dashboardAdmin/penambahan-akun">Tambah User Internal</a></li>
 
             </ul>
