--- a/views/web/sudah_login/home_page_login.ejs
+++ b/views/web/sudah_login/home_page_login.ejs
@@ -405,7 +405,8 @@
             </div>
             <div class="d-flex justify-content-between gap-1 mt-3">
               <button class="btn btn-sm btn-outline-secondary w-100"><i class="bi bi-cart3 me-1"></i>Keranjang</button>
-              <button class="btn btn-sm btn-primary w-100"><i class="bi bi-bag me-1"></i>Pesan Jasa</button>
+              <a href="/view-produk-radio/<%= p.id_produk_iklan %>" class="btn btn-sm btn-primary w-100"><i
+                  class="bi bi-bag me-1"></i>Pesan Jasa</a>
             </div>
             <div class="detail-produk scroll-horizontal">
               <div class="nama-produk">
